--- a/src/index.html
+++ b/src/index.html
@@ -8,34 +8,35 @@
 <body>
 
   <header>
-      <nav class="navbar navbar-expand-lg ">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="./images/noun-plane-1445492.png" alt="">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active fw-bold" aria-current="page" href="#">شركة سفرني</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#title">خدماتنا</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="#" aria-disabled="true">الجولات السياحية</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link " href="#" aria-disabled="true">تواصل معنا</a>
-              </li>
-            </ul>
+    
+
+        <nav class="navbar navbar-expand-lg d-fixed fixed-top">
+          <div class="container">
+            <a class="navbar-brand" href="#">
+              <img src="./images/noun-plane-1445492.png" alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link active fw-bold" aria-current="page" href="#">شركة سفرني</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#services">خدماتنا</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link " href="#travel" aria-disabled="true">الجولات السياحية</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link " href="#communication" aria-disabled="true">تواصل معنا</a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-      </nav>
- 
-   
+        </nav>
+
   </header>
   
   <main>
@@ -53,7 +54,7 @@
         </div>
       </section>
 
-      <section class="services">
+      <section class="services" id="services">
         <div class="container">
         <h2 class="title">خدماتنا</h2>
         <div class="row">
@@ -93,25 +94,26 @@
 
       <section class="travels">
         <div class="container">
+          <h2 class="title" id="travel">الجولات السياحية</h2>
         <div class="row">
           <div class="col-md-6">
-            <div class="travel-img">
-              <img src="#" alt="">
-            </div>
-            <div class="traverl-text">
-              <span></span>
-              <p></p>
-              <a href="travle.html" class="btn button"></a>
+            <div class="card mb-3">
+              <img src="./images/travels/engin-yapici-WA1u0scVLZU-unsplash.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">اسطنبول</h5>
+                <p class="card-text">1200$</p>
+                <a href="travle.html" class="btn button">خطوات الرحلة</a>
+              </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="travel-img">
-              <img src="#" alt="">
-            </div>
-            <div class="traverl-text">
-              <span></span>
-              <p></p>
-              <a href="" class="btn">j</a>
+            <div class="card mb-3">
+              <img src="./images/travels/osman-koycu-c6qF_lYvu2I-unsplash (1).jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title ">الأردن</h5>
+                <p class="card-text ">800$</p>
+                <a href="travle.html" class="btn button">خظوات الرحلة</a>
+              </div>
             </div>
           </div>
         </div>
@@ -119,6 +121,38 @@
       </section>
 
   </main>
+
+  <footer>
+    <div class="container-fluid">
+      <div class="row">
+        <h2 class="title" id="communication">تواصل معنا</h2>
+          <div class="col-md-6">   
+            <div class="social">
+            <ul>
+              <li>
+               <i class="fa-solid fa-phone"></i>
+               012345678
+              </li>
+              <li>
+               <i class="fa-solid fa-map"></i>
+               ابو ظبي , دبي
+              </li>
+              <li>
+               <i class="fa-solid fa-envelope"></i>
+               email@gmail.com
+              </li>
+             </ul>
+          </div>
+        </div>
+          <div class="col-md-6">
+            <div class="map text-center">
+              <iframe class="w-100" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d231234.5113516706!2d55.42050479014773!3d25.100533004725705!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sar!2ssa!4v1709230113139!5m2!1sar!2ssa" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </div>
+
+      </div>
+    </div>
+  </footer>
 
 
 
