--- a/src/travel-2.html
+++ b/src/travel-2.html
@@ -11,7 +11,7 @@
     
 
         <nav class="navbar navbar-expand-lg d-fixed fixed-top">
-          <div class="container">
+          <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
               <img src="./images/noun-plane-1445492.png" alt="">
       
